bump to java 17, kotlin 2.3.0